--- a/logica de programaçao aula 03 exercicios/MariaXGeovana.html
+++ b/logica de programaçao aula 03 exercicios/MariaXGeovana.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="">
-
+    <h1> teste </h1>
+    <script src ="geovana.js">
+        
     </script>
     
 </body>
