--- a/Logica de programaçao aula 03/index.html
+++ b/Logica de programaçao aula 03/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="">
+    <h1> Teste </h1>
+    <script src="parseint.js">
 
     </script>
     
