--- a/Logica de programaçao aula 04/index.html
+++ b/Logica de programaçao aula 04/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="">
-
+    <script src="javascript.JS">
+        
     </script>
     
 </body>
