--- a/logica programaçao aula 4 exercicios/numerpar.html
+++ b/logica programaçao aula 4 exercicios/numerpar.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="">
-
+    <script src="numeropar.js">
+        
     </script>
     
 </body>
