--- a/logica16092024/mercado.html
+++ b/logica16092024/mercado.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="">
 
-    </script>
+
+    <script src="recibo.js"> </script>
     
 </body>
 </html>
